--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.4",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-select": "^5.7.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
